pv-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pv-test
  namespace: pv-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pv-test
  template:
    metadata:
      labels:
        app: pv-test
    spec:
      containers:
      - name: nginx
        image: nginx:1.25-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: persistent-storage
          mountPath: /usr/share/nginx/html/persistent
          readOnly: true
        - name: temporary-storage
          mountPath: /usr/share/nginx/html/temporary
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: nginx-index
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 64Mi
            
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: pv-test-persistent
      - name: temporary-storage
        persistentVolumeClaim:
          claimName: pv-test-temporary
      - name: nginx-config
        configMap:
          name: pv-test-nginx
          items:
          - key: default.conf
            path: default.conf
      - name: nginx-index
        configMap:
          name: pv-test-nginx
          items:
          - key: index.html
            path: index.html
