pv-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pv-test
  namespace: pv-test
spec:
  selector:
    app: pv-test
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
